add images to cards and change button - wip

--- a/index.html
+++ b/index.html
@@ -389,26 +389,18 @@
             pipelines from the ground up and establish the most efficient
             workflows tailored to any project's unique needs.
           </p>
+        
           <a
-            href="https://drive.google.com/uc?export=download&amp;id=1OucLZcRtLJPYQgmSayczsYpfsUTGxQQ-"
-            rel="noreferrer"
-            target="_blank"
-            ><button
-              class="box-border bg-white border-2 border-white text-zinc-900 rounded-md font-medium uppercase px-2 py-2 text-lg md:px-4 md:py-3 hover:bg-zinc-900 hover:text-white"
-            >
-              Download CV
-            </button></a
-          >
-          <a
-            class="relative group overflow-hidden rounded-md text-zinc-900 hover:text-white ease-in-out h-full w-fit uppercase py-4 px-8 text-center text-sm bg-white"
+            class="relative group flex flex-row gap-2 overflow-hidden text-white hover:text-zinc-800 ease-in-out h-full w-fit -skew-x-12 uppercase py-4 px-8 text-center text-lg font-medium bg-zinc-800"
             href="https://drive.google.com/uc?export=download&amp;id=1OucLZcRtLJPYQgmSayczsYpfsUTGxQQ-"
             rel="noreferrer"
             target="_blank"
           >
             <span
-              class="absolute top-0 left-0 w-full h-full bg-zinc-800 z-10 transform -translate-y-full group-hover:translate-y-0 ease-in-out duration-300"
+              class="absolute top-0 left-0 w-full h-full bg-white z-10 transform -translate-y-full group-hover:translate-y-0 ease-in-out duration-300"
             ></span>
-            <span class="relative whitespace-nowrap z-20">Download CV</span>
+            <p class="relative whitespace-nowrap z-20 skew-x-12">Download CV</p>
+            <svg fill="currentColor" stroke="currentColor" class="-mt-0.5 skew-x-12 h-8 w-4" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M3.293 14.707a1 1 0 0 1 1.414-1.414L11 19.586V2a1 1 0 0 1 2 0v17.586l6.293-6.293a1 1 0 0 1 1.414 1.414l-8 8a1 1 0 0 1-.325.216.986.986 0 0 1-.764 0 1 1 0 0 1-.325-.216Z"/></svg>
           </a>
         </div>
       </section>
@@ -445,7 +437,7 @@
               >
                 <div class="w-full relative">
                   <img
-                    src="https://img.youtube.com/vi/lK79KzcCGyY/0.jpg"
+                    src="./assets/dr.webp"
                     alt="Video Thumbnail"
                     class="w-full"
                   />
@@ -492,7 +484,7 @@
               >
                 <div class="w-full relative">
                   <img
-                    src="https://img.youtube.com/vi/lK79KzcCGyY/0.jpg"
+                    src="./assets/showreel.webp"
                     alt="Video Thumbnail"
                     class="w-full"
                   />
@@ -538,7 +530,7 @@
               >
                 <div class="w-full relative">
                   <img
-                    src="https://img.youtube.com/vi/lK79KzcCGyY/0.jpg"
+                    src="./assets/slots.webp"
                     alt="Video Thumbnail"
                     class="w-full"
                   />
