--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     }"
   >
     <!-- NAVBAR -->
-    <nav
-      class="w-screen h-16 text-black shadow-lg z-50 top-0 bg-white bg-opacity-95 sticky"
+    <nav id="#nav"
+      class="w-full h-16 text-black shadow-lg z-50 top-0 bg-white bg-opacity-95 sticky"
     >
       <div
         class="flex justify-between mx-auto max-w-7xl px-4 items-center w-full h-full"
@@ -801,54 +801,6 @@
               >BeefyBee</a
             >
           </p>
-          <a
-            href="#about"
-            @click.prevent="scrollTo('#about')"
-            class="overflow-y-hidden cursor-pointer text-theme-white absolute bottom-6 right-4 z-30 p-2"
-          >
-            <svg
-              class="rotate-180 w-8 h-8 md:w-10 md:h-10 opacity-90"
-              width="15"
-              height="15"
-              viewBox="0 -4.5 20 20"
-              version="1.1"
-              xmlns="http://www.w3.org/2000/svg"
-              xmlns:xlink="http://www.w3.org/1999/xlink"
-              fill="#000000"
-            >
-              <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
-              <g
-                id="SVGRepo_tracerCarrier"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              ></g>
-              <g id="SVGRepo_iconCarrier">
-                <title>arrow_down [#338]</title>
-                <desc>Created with Sketch.</desc>
-                <defs></defs>
-                <g
-                  id="Page-1"
-                  stroke="none"
-                  stroke-width="1"
-                  fill="none"
-                  fill-rule="evenodd"
-                >
-                  <g
-                    id="Dribbble-Light-Preview"
-                    transform="translate(-220.000000, -6684.000000)"
-                    fill="#ffffff"
-                  >
-                    <g id="icons" transform="translate(56.000000, 160.000000)">
-                      <path
-                        d="M164.292308,6524.36583 L164.292308,6524.36583 C163.902564,6524.77071 163.902564,6525.42619 164.292308,6525.83004 L172.555873,6534.39267 C173.33636,6535.20244 174.602528,6535.20244 175.383014,6534.39267 L183.70754,6525.76791 C184.093286,6525.36716 184.098283,6524.71997 183.717533,6524.31405 C183.328789,6523.89985 182.68821,6523.89467 182.29347,6524.30266 L174.676479,6532.19636 C174.285736,6532.60124 173.653152,6532.60124 173.262409,6532.19636 L165.705379,6524.36583 C165.315635,6523.96094 164.683051,6523.96094 164.292308,6524.36583"
-                        id="arrow_down-[#338]"
-                      ></path>
-                    </g>
-                  </g>
-                </g>
-              </g>
-            </svg>
-          </a>
         </div>
       </footer>
     </main>
