add favicon and change head

--- a/index.html
+++ b/index.html
@@ -1,19 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dmitri Petrov_CG Artist</title>
-    <link rel="stylesheet" href="output.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&family=Oswald:wght@200..700&display=swap"
-      rel="stylesheet"
-    />
-    <script type="module" src="scripts/main.js"></script>
-    <script src="https://cdn.tailwindcss.com"></script>
+      <meta charset="UTF-8" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <title>Dmitri Petrov | CG Artist & 3D Animator</title>
+
+      <!-- SEO Meta Tags -->
+      <meta name="description" content="Portfolio of Dmitri Petrov, a CG Artist & 3D Animator with expertise in gaming, slot animations, and art team leadership." />
+      <meta name="keywords" content="Dmitri Petrov, CG Artist, 3D Animator, Slot Games, Team Leader, Gaming Industry, Art Direction, Animation" />
+      <meta name="author" content="Dmitri Petrov" />
+
+      <!-- Open Graph / Facebook -->
+      <meta property="og:type" content="website" />
+      <meta property="og:url" content="https://petrov-animation.netlify.app/" />
+      <meta property="og:title" content="Dmitri Petrov | CG Artist & 3D Animator" />
+      <meta property="og:description" content="Explore the portfolio of Dmitri Petrov, showcasing his work in slot animations, gaming, and art team leadership." />
+      <meta property="og:image" content="https://petrov-animation.netlify.app/assets/robot_model.webp" />
+
+      <!-- Twitter -->
+      <meta property="twitter:card" content="summary_large_image" />
+      <meta property="twitter:url" content="https://petrov-animation.netlify.app/" />
+      <meta property="twitter:title" content="Dmitri Petrov | CG Artist & 3D Animator" />
+      <meta property="twitter:description" content="Portfolio of Dmitri Petrov, a versatile CG Artist & 3D Animator with gaming and team leadership experience." />
+      <meta property="twitter:image" content="https://petrov-animation.netlify.app/assets/robot_model.webp" />
+
+      <!-- Styles and Fonts -->
+      <link rel="stylesheet" href="output.css" />
+      <link rel="preconnect" href="https://fonts.googleapis.com" />
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+      <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&family=Oswald:wght@200..700&display=swap" rel="stylesheet" />
+
+      <!-- Favicon -->
+      <link rel="icon" href="https://petrov-animation.netlify.app/favicon.ico" type="image/x-icon" />
+
+      <!-- Scripts -->
+      <script type="module" src="scripts/main.js"></script>
+      <script src="https://cdn.tailwindcss.com"></script>
+
+      <!-- Additional Optimization -->
+      <link rel="preload" href="https://petrov-animation.netlify.app/assets/robot_model.webp" as="image" />
   </head>
+
   <body
     class="bg-zinc-800 text-white"
     x-data="{
