add netlify tag to form

--- a/index.html
+++ b/index.html
@@ -637,6 +637,7 @@
             method="POST"
             data-netlify="true"
             netlify-honeypot="bot-field" 
+            netlify
             class="w-full flex flex-col gap-6 lg:w-2/3 mx-auto"
           >
             <!-- Honeypot Field (hidden) -->
