--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <link rel="icon" href="https://petrov-animation.netlify.app/favicon.ico" type="image/x-icon" />
 
       <!-- Scripts -->
-      <script type="module" src="scripts/main.js"></script>
+      <script type="module" src="assets/main-D1mcRiso.js"></script>
       <script src="https://cdn.tailwindcss.com"></script>
 
       <!-- Additional Optimization -->
