--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <meta property="twitter:image" content="https://petrov-animation.netlify.app/assets/robot_model.webp" />
 
       <!-- Styles and Fonts -->
-      <link rel="stylesheet" href="output.css" />
+      <link rel="stylesheet" href="/output.css" />
       <link rel="preconnect" href="https://fonts.googleapis.com" />
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
       <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&family=Oswald:wght@200..700&display=swap" rel="stylesheet" />
@@ -34,7 +34,7 @@
       <link rel="icon" href="https://petrov-animation.netlify.app/favicon.ico" type="image/x-icon" />
 
       <!-- Scripts -->
-      <script type="module" src="dist/assets/main-D1mcRiso.js"></script>
+      <script type="module" src="/dist/assets/main-D1mcRiso.js"></script>
 
       <!-- Additional Optimization -->
       <link rel="preload" href="https://petrov-animation.netlify.app/assets/robot_model.webp" as="image" />
