change vite config and paths

--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
       <meta property="og:url" content="https://petrov-animation.netlify.app/" />
       <meta property="og:title" content="Dmitri Petrov | CG Artist & 3D Animator" />
       <meta property="og:description" content="Explore the portfolio of Dmitri Petrov, showcasing his work in slot animations, gaming, and art team leadership." />
-      <meta property="og:image" content="https://petrov-animation.netlify.app/assets/robot_model.webp" />
+      <meta property="og:image" content="https://petrov-animation.netlify.app/images/robot_model.webp" />
 
       <!-- Twitter -->
       <meta property="twitter:card" content="summary_large_image" />
       <meta property="twitter:url" content="https://petrov-animation.netlify.app/" />
       <meta property="twitter:title" content="Dmitri Petrov | CG Artist & 3D Animator" />
       <meta property="twitter:description" content="Portfolio of Dmitri Petrov, a versatile CG Artist & 3D Animator with gaming and team leadership experience." />
-      <meta property="twitter:image" content="https://petrov-animation.netlify.app/assets/robot_model.webp" />
+      <meta property="twitter:image" content="https://petrov-animation.netlify.app/images/robot_model.webp" />
 
       <!-- Styles and Fonts -->
       <link rel="stylesheet" href="/output.css" />
@@ -34,10 +34,10 @@
       <link rel="icon" href="https://petrov-animation.netlify.app/favicon.ico" type="image/x-icon" />
 
       <!-- Scripts -->
-      <script type="module" src="/dist/assets/main-D1mcRiso.js"></script>
+      <script type="module" src="/assets/main.js"></script>
 
       <!-- Additional Optimization -->
-      <link rel="preload" href="https://petrov-animation.netlify.app/assets/robot_model.webp" as="image" />
+      <link rel="preload" href="https://petrov-animation.netlify.app/images/robot_model.webp" as="image" />
   </head>
 
   <body
@@ -171,12 +171,12 @@
         <picture id="imageHeader" class="w-full h-full object-cover z-10">
           <source
             media="(max-width: 767px)"
-            srcset="assets/robot_model_mobile.webp"
+            srcset="images/robot_model_mobile.webp"
             alt="Robot Model"
           />
           <img
             class="w-full h-full object-cover"
-            src="assets/robot_model.webp"
+            src="images/robot_model.webp"
             alt="Robot Model"
           />
         </picture>
@@ -460,7 +460,7 @@
               >
                 <div class="w-full relative">
                   <img
-                    src="./assets/dr.webp"
+                    src="./images/dr.webp"
                     alt="Video Thumbnail"
                     class="w-full rounded-md"
                   />
@@ -505,7 +505,7 @@
               >
                 <div class="w-full relative">
                   <img
-                    src="./assets/showreel.webp"
+                    src="./images/showreel.webp"
                     alt="Video Thumbnail"
                     class="w-full rounded-md"
                   />
@@ -549,7 +549,7 @@
               >
                 <div class="w-full relative">
                   <img
-                    src="./assets/slots.webp"
+                    src="./images/slots.webp"
                     alt="Video Thumbnail"
                     class="w-full rounded-md"
                   />
