Fix Vite build for Netlify; ignore build output

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <link rel="icon" href="https://petrov-animation.netlify.app/favicon.ico" type="image/x-icon" />
 
       <!-- Scripts -->
-      <script type="module" src="/assets/main.js"></script>
+      <script type="module" src="/scripts/main.js"></script>
 
       <!-- Additional Optimization -->
       <link rel="preload" href="https://petrov-animation.netlify.app/images/robot_model.webp" as="image" />
@@ -465,7 +465,7 @@
                     class="w-full rounded-md"
                   />
                   <div
-                    class="absolute bg-zinc-800 rounded-md lg:bg-opacity-30 duration-150 ease-in-out group-hover:bg-opacity-0 flex w-full h-full top-0 items-center justify-center"
+                    class="absolute lg:bg-zinc-800 rounded-md lg:bg-opacity-30 duration-150 ease-in-out group-hover:bg-opacity-0 flex w-full h-full top-0 items-center justify-center"
                   >
                     <svg
                       width="50"
@@ -510,7 +510,7 @@
                     class="w-full rounded-md"
                   />
                   <div
-                    class="absolute bg-zinc-800 rounded-md lg:bg-opacity-30 duration-150 ease-in-out group-hover:bg-opacity-0 flex w-full h-full top-0 items-center justify-center"
+                    class="absolute lg:bg-zinc-800 rounded-md lg:bg-opacity-30 duration-150 ease-in-out group-hover:bg-opacity-0 flex w-full h-full top-0 items-center justify-center"
                   >
                     <svg
                       width="50"
@@ -554,7 +554,7 @@
                     class="w-full rounded-md"
                   />
                   <div
-                    class="absolute bg-zinc-800 rounded-md lg:bg-opacity-30 duration-150 ease-in-out group-hover:bg-opacity-0 flex w-full h-full top-0 items-center justify-center"
+                    class="absolute lg:bg-zinc-800 rounded-md lg:bg-opacity-30 duration-150 ease-in-out group-hover:bg-opacity-0 flex w-full h-full top-0 items-center justify-center"
                   >
                     <svg
                       width="50"
