--- a/index.html
+++ b/index.html
@@ -1,44 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-      <meta charset="UTF-8" />
-      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>Dmitri Petrov | CG Artist & 3D Animator</title>
-
-      <!-- SEO Meta Tags -->
-      <meta name="description" content="Portfolio of Dmitri Petrov, a CG Artist & 3D Animator with expertise in gaming, slot animations, and art team leadership." />
-      <meta name="keywords" content="Dmitri Petrov, CG Artist, 3D Animator, Slot Games, Team Leader, Gaming Industry, Art Direction, Animation" />
-      <meta name="author" content="Dmitri Petrov" />
-
-      <!-- Open Graph / Facebook -->
-      <meta property="og:type" content="website" />
-      <meta property="og:url" content="https://petrov-animation.netlify.app/" />
-      <meta property="og:title" content="Dmitri Petrov | CG Artist & 3D Animator" />
-      <meta property="og:description" content="Explore the portfolio of Dmitri Petrov, showcasing his work in slot animations, gaming, and art team leadership." />
-      <meta property="og:image" content="https://petrov-animation.netlify.app/images/robot_model.webp" />
-
-      <!-- Twitter -->
-      <meta property="twitter:card" content="summary_large_image" />
-      <meta property="twitter:url" content="https://petrov-animation.netlify.app/" />
-      <meta property="twitter:title" content="Dmitri Petrov | CG Artist & 3D Animator" />
-      <meta property="twitter:description" content="Portfolio of Dmitri Petrov, a versatile CG Artist & 3D Animator with gaming and team leadership experience." />
-      <meta property="twitter:image" content="https://petrov-animation.netlify.app/images/robot_model.webp" />
-
-      <!-- Styles and Fonts -->
-      <link rel="stylesheet" href="/output.css" />
-      <link rel="preconnect" href="https://fonts.googleapis.com" />
-      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-      <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&family=Oswald:wght@200..700&display=swap" rel="stylesheet" />
-
-      <!-- Favicon -->
-      <link rel="icon" href="https://petrov-animation.netlify.app/favicon.ico" type="image/x-icon" />
-
-      <!-- Scripts -->
-      <script type="module" src="/scripts/main.js"></script>
-
-      <!-- Additional Optimization -->
-      <link rel="preload" href="https://petrov-animation.netlify.app/images/robot_model.webp" as="image" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  
+    <title>Dmitri Petrov | CG Artist & 3D Animator</title>
+  
+    <!-- SEO -->
+    <meta
+      name="description"
+      content="Portfolio of Dmitri Petrov, a CG Artist & 3D Animator with expertise in gaming, slot animations, and art team leadership."
+    />
+    <meta
+      name="keywords"
+      content="Dmitri Petrov, CG Artist, 3D Animator, Slot Games, Team Leader, Gaming Industry, Art Direction, Animation"
+    />
+    <meta name="author" content="Dmitri Petrov" />
+    <link rel="canonical" href="https://petrov-3d-animation.netlify.app/" />
+  
+    <!-- Open Graph -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://petrov-3d-animation.netlify.app/" />
+    <meta property="og:title" content="Dmitri Petrov | CG Artist & 3D Animator" />
+    <meta
+      property="og:description"
+      content="Explore the portfolio of Dmitri Petrov, showcasing work in 3D animation, rigging, modeling, and game/slot projects."
+    />
+    <meta property="og:image" content="https://petrov-3d-animation.netlify.app/og-image.jpg" />
+    <meta property="og:image:secure_url" content="https://petrov-3d-animation.netlify.app/og-image.jpg" />
+    <meta property="og:image:type" content="image/jpeg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:image:alt" content="Dmitri Petrov — CG Artist & 3D Animator portfolio preview" />
+  
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://petrov-3d-animation.netlify.app/" />
+    <meta name="twitter:title" content="Dmitri Petrov | CG Artist & 3D Animator" />
+    <meta
+      name="twitter:description"
+      content="Portfolio of Dmitri Petrov — 3D animation, rigging, modeling, and game/slot projects."
+    />
+    <meta name="twitter:image" content="https://petrov-3d-animation.netlify.app/og-image.jpg" />
+  
+    <!-- Favicons -->
+    <link rel="icon" href="/favicon.ico" sizes="any" />
+    <link rel="shortcut icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" sizes="180x180" />
+  
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&family=Oswald:wght@200..700&display=swap"
+      rel="stylesheet"
+    />
+  
+    <!-- Styles/Scripts (keep as you have) -->
+    <link rel="stylesheet" href="/output.css" />
+    <script type="module" src="/scripts/main.js"></script>
+  
+    <!-- Optional: preload the share image (correct domain + correct file type) -->
+    <link rel="preload" href="/og-image.jpg" as="image" />
   </head>
+  
 
   <body
     class="bg-zinc-800 text-white"
