fix hover effects

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
     <link rel="icon" href="/favicon.ico" sizes="any" />
     <link rel="shortcut icon" href="/favicon.ico" />
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" sizes="180x180" />
+
   
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -237,7 +238,7 @@
             >
               <svg
                 fill="#FFF"
-                class="w-[30px] h-[30px] sm:w-[40px] sm:h-[40px] hover:scale-110 duration-150 ease-in-out"
+                class="w-[30px] h-[30px] sm:w-[40px] sm:h-[40px] hover:scale-110 duration-300 ease-in-out ease-in-out"
                 viewBox="0 0 32 32"
                 version="1.1"
                 xmlns="http://www.w3.org/2000/svg"
@@ -263,7 +264,7 @@
               rel="noreferrer"
             >
               <svg
-                class="h-[38px] w-[35px] sm:h-[47px] sm:w-[45px] hover:scale-110 duration-150 ease-in-out"
+                class="h-[38px] w-[35px] sm:h-[47px] sm:w-[45px] hover:scale-110 duration-300 ease-in-out ease-in-out"
                 version="1.1"
                 id="_x32_"
                 xmlns="http://www.w3.org/2000/svg"
@@ -299,7 +300,7 @@
               rel="noreferrer"
             >
               <svg
-                class="w-[30px] h-[30px] sm:w-[40px] sm:h-[40px] hover:scale-110"
+                class="w-[30px] h-[30px] sm:w-[40px] sm:h-[40px] duration-300 ease-in-out hover:scale-110"
                 fill="#FFF"
                 viewBox="0 0 24 24"
                 xmlns="http://www.w3.org/2000/svg"
@@ -321,7 +322,7 @@
             </a>
             <a href="https://t.me/dzimge" target="_blank" rel="noreferrer">
               <svg
-                class="w-[35px] h-[35px] sm:w-[45px] sm:h-[45px] hover:scale-110 duration-150 ease-in-out"
+                class="w-[35px] h-[35px] sm:w-[45px] sm:h-[45px] hover:scale-110 duration-300 ease-in-out ease-in-out"
                 fill="#ffffff"
                 viewBox="0 0 32 32"
                 xmlns="http://www.w3.org/2000/svg"
@@ -346,7 +347,7 @@
               rel="noreferrer"
             >
               <svg
-                class="w-[45px] h-[45px] sm:w-[55px] sm:h-[55px] hover:scale-110 duration-150 ease-in-out"
+                class="w-[45px] h-[45px] sm:w-[55px] sm:h-[55px] hover:scale-110 duration-300 ease-in-out ease-in-out"
                 viewBox="0 0 24 24"
                 fill="none"
                 xmlns="http://www.w3.org/2000/svg"
@@ -490,7 +491,7 @@
                     class="w-full rounded-md"
                   />
                   <div
-                    class="absolute lg:bg-zinc-800 rounded-md lg:bg-opacity-30 duration-150 ease-in-out group-hover:bg-opacity-0 flex w-full h-full top-0 items-center justify-center"
+                    class="absolute bg-zinc-800 rounded-md bg-opacity-30 duration-300 ease-in-out ease-in-out group-hover:bg-opacity-0 flex w-full h-full top-0 items-center justify-center"
                   >
                     <svg
                       width="50"
@@ -516,7 +517,7 @@
                   </div>
                 </div>
 
-                <h3 class="lg:ml-4 lg:mr-12 text-xl md:text-2xl mt-2 font-bold">
+                <h3 class="lg:ml-4 lg:mr-12 text-xl md:text-2xl mt-4 font-bold">
                   Trailer for a Frankenstein Themed Game
                 </h3>
               </div>
@@ -528,14 +529,14 @@
                 @click="openModal('XFNTTKEm4nc')"
                 class="cursor-pointer shrink-0"
               >
-                <div class="w-full relative">
+                <div class="w-full border-2  relative">
                   <img
                     src="./images/showreel.webp"
                     alt="Video Thumbnail"
-                    class="w-full rounded-md"
+                    class="w-full  rounded-md"
                   />
                   <div
-                    class="absolute lg:bg-zinc-800 rounded-md lg:bg-opacity-30 duration-150 ease-in-out group-hover:bg-opacity-0 flex w-full h-full top-0 items-center justify-center"
+                    class="absolute bg-zinc-800 rounded-md bg-opacity-30 duration-300 ease-in-out ease-in-out group-hover:bg-opacity-0 flex w-full h-full top-0 items-center justify-center"
                   >
                     <svg
                       width="50"
@@ -560,7 +561,7 @@
                     </svg>
                   </div>
                 </div>
-                <h3 class="lg:ml-4 lg:mr-8 text-xl md:text-2xl mt-2 font-bold">
+                <h3 class="lg:ml-4 lg:mr-8 text-xl md:text-2xl mt-4 font-bold">
                   Showreel
                 </h3>
               </div>
@@ -579,7 +580,7 @@
                     class="w-full rounded-md"
                   />
                   <div
-                    class="absolute lg:bg-zinc-800 rounded-md lg:bg-opacity-30 duration-150 ease-in-out group-hover:bg-opacity-0 flex w-full h-full top-0 items-center justify-center"
+                    class="absolute bg-zinc-800 rounded-md bg-opacity-30 duration-300 ease-in-out ease-in-out group-hover:bg-opacity-0 flex w-full h-full top-0 items-center justify-center"
                   >
                     <svg
                       width="50"
@@ -604,7 +605,7 @@
                     </svg>
                   </div>
                 </div>
-                <h3 class="lg:ml-4 lg:mr-8 text-xl md:text-2xl font-bold mt-2">
+                <h3 class="lg:ml-6 mt-4 lg:mr-8 text-xl md:text-2xl font-bold">
                   Slot animation samples
                 </h3>
               </div>
@@ -720,7 +721,7 @@
               >
                 <svg
                   fill="#FFF"
-                  class="w-[30px] h-[30px] sm:w-[40px] sm:h-[40px] hover:scale-110 duration-150 ease-in-out"
+                  class="w-[30px] h-[30px] sm:w-[40px] sm:h-[40px] hover:scale-110 duration-300 ease-in-out ease-in-out"
                   viewBox="0 0 32 32"
                   version="1.1"
                   xmlns="http://www.w3.org/2000/svg"
@@ -746,7 +747,7 @@
                 rel="noreferrer"
               >
                 <svg
-                  class="h-[38px] w-[35px] sm:h-[47px] sm:w-[45px] hover:scale-110 duration-150 ease-in-out"
+                  class="h-[38px] w-[35px] sm:h-[47px] sm:w-[45px] hover:scale-110 duration-300 ease-in-out ease-in-out"
                   version="1.1"
                   id="_x32_"
                   xmlns="http://www.w3.org/2000/svg"
@@ -782,7 +783,7 @@
                 rel="noreferrer"
               >
                 <svg
-                  class="w-[30px] h-[30px] sm:w-[40px] sm:h-[40px] hover:scale-110"
+                  class="w-[30px] h-[30px] sm:w-[40px] sm:h-[40px] hover:scale-110 duration-300 ease-in-out"
                   fill="#FFF"
                   viewBox="0 0 24 24"
                   xmlns="http://www.w3.org/2000/svg"
@@ -804,7 +805,7 @@
               </a>
               <a href="https://t.me/dzimge" target="_blank" rel="noreferrer">
                 <svg
-                  class="w-[35px] h-[35px] sm:w-[45px] sm:h-[45px] hover:scale-110 duration-150 ease-in-out"
+                  class="w-[35px] h-[35px] sm:w-[45px] sm:h-[45px] hover:scale-110 duration-300 ease-in-out ease-in-out"
                   fill="#ffffff"
                   viewBox="0 0 32 32"
                   xmlns="http://www.w3.org/2000/svg"
@@ -829,7 +830,7 @@
                 rel="noreferrer"
               >
                 <svg
-                  class="w-[45px] h-[45px] sm:w-[55px] sm:h-[55px] hover:scale-110 duration-150 ease-in-out"
+                  class="w-[45px] h-[45px] sm:w-[55px] sm:h-[55px] hover:scale-110 duration-300 ease-in-out ease-in-out"
                   viewBox="0 0 24 24"
                   fill="none"
                   xmlns="http://www.w3.org/2000/svg"
@@ -851,12 +852,6 @@
             </div>
           </div>
           <p>© 2024 Dmitri Petrov</p>
-          <p class="text-zinc-800 text-xs absolute bottom-0 right-0">
-            Website created by
-            <a href="https://beefybee.com/" target="_blank" class="cursor-none"
-              >BeefyBee</a
-            >
-          </p>
         </div>
       </footer>
     </main>
